--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -5,19 +5,28 @@ on:
     branches:
       - main
 
+permissions:
+  contents: read
+  packages: write
+  id-token: write
+
 jobs:
   build:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
+      id-token: write
 
     steps:
     - name: Checkout Code
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
 
     - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v2
+      uses: docker/setup-buildx-action@v3
 
     - name: Login to DockerHub
-      uses: docker/login-action@v2
+      uses: docker/login-action@v3
       with:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
@@ -28,6 +37,8 @@ jobs:
         context: .
         push: true
         tags: ${{ secrets.DOCKERHUB_USERNAME }}/my-react-app:latest
+        cache-from: type=registry,ref=${{ secrets.DOCKERHUB_USERNAME }}/my-react-app:cache
+        cache-to: type=inline
 
   security_scan:
     needs: build
@@ -41,7 +52,7 @@ jobs:
         sudo dpkg -i trivy_0.47.0_Linux-64bit.deb
 
     - name: Scan Docker Image
-      run: trivy image ${{ secrets.DOCKERHUB_USERNAME }}/my-react-app:latest
+      run: trivy image --severity CRITICAL,HIGH --no-progress ${{ secrets.DOCKERHUB_USERNAME }}/my-react-app:latest
 
   deploy:
     needs: security_scan
@@ -57,6 +68,7 @@ jobs:
       run: |
         ssh -o StrictHostKeyChecking=no ubuntu@${{ secrets.SERVER_IP }} << 'EOF'
           docker pull ${{ secrets.DOCKERHUB_USERNAME }}/my-react-app:latest
-          docker stop react-app || true && docker rm react-app || true
-          docker run -d --name react-app -p 80:80 ${{ secrets.DOCKERHUB_USERNAME }}/my-react-app:latest
+          docker stop react-app || true
+          docker rm react-app || true
+          docker run -d --name react-app --restart=always -p 80:80 ${{ secrets.DOCKERHUB_USERNAME }}/my-react-app:latest
         EOF
