--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -47,9 +47,8 @@ jobs:
     steps:
     - name: Install Trivy
       run: |
-        sudo apt-get update && sudo apt-get install wget -y
-        wget https://github.com/aquasecurity/trivy/releases/latest/download/trivy_0.47.0_Linux-64bit.deb
-        sudo dpkg -i trivy_0.47.0_Linux-64bit.deb
+        wget https://github.com/aquasecurity/trivy/releases/download/v0.61.1/trivy_0.61.1_Linux-64bit.deb
+        sudo dpkg -i trivy_0.61.1_Linux-64bit.deb
 
     - name: Scan Docker Image
       run: trivy image --severity CRITICAL,HIGH --no-progress ${{ secrets.DOCKERHUB_USERNAME }}/my-react-app:latest
