--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -72,10 +72,12 @@ jobs:
           ssh-keyscan -H 123.45.67.89 >> ~/.ssh/known_hosts
       
           ssh -o StrictHostKeyChecking=no aneeshaswany7@123.45.67.89 << 'EOF'
-            docker pull your-dockerhub-username/my-react-app:latest
+            set -e
+            set -x
+            docker pull aneeshaswany7/my-react-app:latest
             docker stop react-app || true
             docker rm react-app || true
-            docker run -d --name react-app --restart=always -p 80:80 your-dockerhub-username/my-react-app:latest
+            docker run -d --name react-app --restart=always -p 80:80 aneeshaswany7/my-react-app:latest
           EOF
 
 
